...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qrI-0D-taB">
                                <rect key="frame" x="129.5" y="397.5" width="155" height="155"/>
                                <state key="normal" image="Record"/>
                                <connections>
                                    <action selector="recordButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xdR-EF-k0K"/>
...
                                    <constraint firstAttribute="width" constant="64" id="zKG-xZ-8RN"/>
                                </constraints>
                                <state key="normal" image="Stop"/>
                                <connections>
                                    <action selector="stopRecordingButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TbY-e8-rnD"/>
...
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WBi-P2-be6" userLabel="Slow">
                                                <rect key="frame" x="0.0" y="0.0" width="232.5" height="64"/>
                                                <state key="normal" image="Slow"/>
...
                                                </connections>
                                            </button>
                                            <button opaque="NO" tag="1" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Ugd-iJ-hot" userLabel="Fast">
                                                <rect key="frame" x="232.5" y="0.0" width="232.5" height="64"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <subviews>
                                            <button opaque="NO" tag="2" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HLs-bu-kLO" userLabel="HighPitch">
                                                <rect key="frame" x="0.0" y="0.0" width="232.5" height="64"/>
                                                <state key="normal" image="HighPitch"/>
...
                                                </connections>
                                            </button>
                                            <button opaque="NO" tag="3" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="qLR-x1-6GI" userLabel="LowPitch">
                                                <rect key="frame" x="232.5" y="0.0" width="232.5" height="64"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                        <rect key="frame" x="0.0" y="136" width="465" height="64"/>
                                        <subviews>
                                            <button opaque="NO" tag="4" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CHq-yj-VCo" userLabel="Echo">
                                                <rect key="frame" x="0.0" y="0.0" width="232.5" height="64"/>
                                                <state key="normal" image="Echo"/>
...
                                                </connections>
                                            </button>
                                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ekm-A1-wKP" userLabel="Reverb">
                                                <rect key="frame" x="232.5" y="0.0" width="232.5" height="64"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
